--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇬🇧 英国-2.92MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.50MB/s(Youtube:不良林), server: 169.197.142.99, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-728.3KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-642.8KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 🇨🇳 中国-9.39MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.75MB/s(Youtube:不良林), server: www.tokyo2021.ga, port: 443, type: trojan, password: bc7593fe-0604-4fbe-a70bYWVzLTI1Ni1nY2ac5a3ef0-lWNFc1RmRBNk5NQU5KSnga3fa58ac5a3ef0-b4ab-11eb-b65e-7a990132-cf76-4ac2-8a3c-681743fa8627, sni: www.tokyo2021.ga, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.19MB/s(Youtube:不良林), server: jgwdb1.gaox.ml, port: 443, type: trojan, password: a580d839-ee41-4df1-bf03-6789dca32e30, sni: jgwdb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-308.0KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇨🇳 中国-4.65MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.64MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.31MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-206.7KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-10.25MB/s(Youtube:不良林), server: 13.125.173.191, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇺🇸 美国-3.49MB/s(Youtube:不良林), server: 169.197.142.99, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
+  - {name: 🇮🇳 印度-2.18MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
+  - {name: 🇮🇳 印度-2.06MB/s(Youtube:不良林), server: 159.65.157.70, port: 61548, type: ss, cipher: chacha20-ietf-poly1305, password: 1c0e4a18-4d7a-4231-a55d-1dee0fe6732a}
+  - {name: 🇬🇧 英国-3.01MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-9.25MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.36MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-11.43MB/s(Youtube:不良林), server: www.tokyo2021.ga, port: 443, type: trojan, password: 52face97a990132-cf76-4ac2-8a3c-681743fa8627, sni: www.tokyo2021.ga, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-642.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-206.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-642.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-206.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-642.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-206.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-206.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-642.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-206.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-642.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-206.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-642.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-206.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇬🇧 英国-2.92MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.50MB/s(Youtube:不良林)
-      - 🇺🇸 美国-728.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-642.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.39MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.19MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.65MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.31MB/s(Youtube:不良林)
+      - 🇭🇰 香港-206.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.25MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
+      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
