--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-10.31MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-206.7KB/s(Youtube:不良林), server: 165.154.225.230, port: 33080, type: vmess, uuid: b8aaa6e1-f0b3-b9ec-3dfc-bb226c167b33, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-10.25MB/s(Youtube:不良林), server: 13.125.173.191, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇺🇸 美国-3.49MB/s(Youtube:不良林), server: 169.197.142.99, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇮🇳 印度-2.18MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
-  - {name: 🇮🇳 印度-2.06MB/s(Youtube:不良林), server: 159.65.157.70, port: 61548, type: ss, cipher: chacha20-ietf-poly1305, password: 1c0e4a18-4d7a-4231-a55d-1dee0fe6732a}
-  - {name: 🇬🇧 英国-3.01MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-9.25MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.36MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-11.43MB/s(Youtube:不良林), server: www.tokyo2021.ga, port: 443, type: trojan, password: 52face97a990132-cf76-4ac2-8a3c-681743fa8627, sni: www.tokyo2021.ga, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.70MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-12.48MB/s(Youtube:不良林), server: iepl-zebra.19900101.xyz, port: 4501, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-471.2KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-526.9KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.83MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
+  - {name: 🇮🇳 印度-1.75MB/s(Youtube:不良林), server: 159.65.157.70, port: 61548, type: ss, cipher: chacha20-ietf-poly1305, password: 1c0e4a18-4d7a-4231-a55d-1dee0fe6732a}
+  - {name: 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇬🇧 英国-2.98MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-2.04MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-206.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-10.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-471.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.83MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-10.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-206.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-10.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-471.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.83MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-206.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-10.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-471.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.83MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-206.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-10.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-206.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-10.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-471.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.83MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-10.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-206.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-10.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-471.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.83MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-10.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-206.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-10.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-471.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.83MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-10.31MB/s(Youtube:不良林)
-      - 🇭🇰 香港-206.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-10.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.49MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.06MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-9.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-11.43MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-471.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.83MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
