--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.70MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 中国-12.48MB/s(Youtube:不良林), server: iepl-zebra.19900101.xyz, port: 4501, type: vmess, uuid: 1cfaa36d-9912-3433-b9bc-fd5b5085613d, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-471.2KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-526.9KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-1.83MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
-  - {name: 🇮🇳 印度-1.75MB/s(Youtube:不良林), server: 159.65.157.70, port: 61548, type: ss, cipher: chacha20-ietf-poly1305, password: 1c0e4a18-4d7a-4231-a55d-1dee0fe6732a}
-  - {name: 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
-  - {name: 🇬🇧 英国-2.98MB/s(Youtube:不良林), server: jgwld2.gaox.ml, port: 443, type: trojan, password: d7fd8aaa-4581-4281-80aa-4b63e5e1f157, sni: jgwld2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-2.04MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-7.39MB/s(Youtube:不良林), server: 116.129.253.227, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇨🇳 中国-8.40MB/s(Youtube:不良林), server: 116.129.253.191, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.56MB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 54df1ad5-1323-4dd7-b7a1-a53202347526}
+  - {name: 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林), server: 213.183.53.179, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇯🇵 日本-3.41MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.14MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.09MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.52MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: e5cf7069-e269-4926-bdb0-fbb39cde6a3a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-471.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.83MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.40MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-471.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.83MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.40MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-471.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.83MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.40MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-471.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.83MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.40MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-471.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.83MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.40MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-471.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.83MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.40MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.70MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-12.48MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-471.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-526.9KB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.83MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.75MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.19MB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.98MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.39MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.40MB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.56MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.47MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.14MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
